[tool.poetry]
name = "cas30-klu-rtvi"
version = "0.1.0"
description = ""
authors = ["Sai SriHarsha Griddaluru <sriharsha.9554@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
